@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.9
 #
 
+2005-08-02 10:43:19 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-103
+
+    Summary:
+      catalog, fix search when objects has been added
+    Revision:
+      itools--main--0.9--patch-103
+
+
+    modified files:
+     Changelog catalog/IIndex.py
+
+
 2005-07-22 12:17:35 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-102
 
     Summary:
